# code-transformers

./: .env-template  .gitignore  README.md  description.md  graph_parser.py  main.py  pyproject.toml  results.csv  run.py  run.sh  writing_pad.md
example_repo/: modul2.py  module1.py
examples/factorial/: call.py  instruction2.txt
examples/greeting/: call.py
examples/sum_of_squares/: instruction1.txt  instruction2.txt
factorial/: call.py  instruction1.txt
greeting/: call.py  helper.py  instruction1.txt  instruction2.txt
ground_truth/: factorial.py  greeting.py  square_sum.py
metrics/: compiler.py  diff.py  structural_comparison.py
square_sum/: helper.py
tests/: diff.py  structural_comparison.py  test_factorial.py  test_greeting.py  test_logger.py  test_square_sum.py
utils/: __init__.py  analyzer.py  llm.py  modifier.py  parser_utils.py
utils/prompts/: prompt1.txt  prompt2.txt
