[tool.poetry]
name = "codegraph-transformer"
version = "0.1.0"
description = ""
authors = ["kanakraj <t-kanakraj@microsoft.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.41.2"
openai = "^1.34.0"
tenacity = "^8.3.0"
networkx = "^3.3"
matplotlib = "^3.9.0"
nltk = "^3.8.1"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
